--- a/style.css
+++ b/style.css
@@ -9,13 +9,18 @@ html {
 body {
     margin: 0;
     font-size: 2rem;
-    display: flex;
-    flex:1;
     min-height: 100vh;
     align-items: center;
 }
 
+#date {
+    padding-top: 50px;
+    font-size: 6rem;
+    margin:auto;
+    font-family: 'Indie Flower', cursive;
+}
 .clock {
+    display: block;
     width:30rem;
     height: 30rem;
     border: 10px solid black;
